<resources>
    <string name="app_name">dota2timer</string>
    <string name="game_action_pause">Pause Game</string>
    <string name="game_action_resume">Resume Game</string>
    <string name="game_action_start">Start Game</string>
    <string name="game_action_end">End Game</string>
    <string name="game_action_end_confirmation_message">Are you sure?</string>
    <string name="game_action_end_confirmation_button_positive">End game</string>
    <string name="game_action_end_confirmation_button_negative">Cancel</string>
    <string name="menu_game_action_edit_events">Edit Events</string>
    <string name="configuration_title_enabled">Enabled</string>
    <string name="configuration_action_cancel">Cancel</string>
    <string name="configuration_action_save">Save</string>
    <string name="game_title_settings">Settings</string>
    <string name="edit_configuration_description_event_name">Event name</string>
    <string name="edit_configuration_description_event_initial">Initial</string>
    <string name="edit_configuration_description_event_period">Repeat</string>
    <string name="edit_configuration_description_event_notice">Notice</string>
    <string name="configuration_action_new">New</string>
</resources>
